crates/service/tests/diagnostics/snapshots/features__diagnostics__uninit__block_loop.snap
---
source: crates/service/tests/diagnostics/uninit.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 4,
          "character": 16
        },
        "end": {
          "line": 4,
          "character": 17
        }
      },
      "severity": 1,
      "code": "uninit",
      "source": "wat",
      "message": "local `1` is read before being initialized"
    },
    {
      "range": {
        "start": {
          "line": 26,
          "character": 19
        },
        "end": {
          "line": 26,
          "character": 20
        }
      },
      "severity": 1,
      "code": "uninit",
      "source": "wat",
      "message": "local `1` is read before being initialized"
    }
  ]
}
