crates/service/tests/diagnostics/snapshots/features__diagnostics__uninit__nested_if.snap
---
source: crates/service/tests/diagnostics/uninit.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 16,
          "character": 14
        },
        "end": {
          "line": 16,
          "character": 16
        }
      },
      "severity": 1,
      "code": "uninit",
      "source": "wat",
      "message": "local `$b` is read before being initialized"
    }
  ]
}
