crates/service/tests/diagnostics/snapshots/features__diagnostics__uninit__undef.snap
---
source: crates/service/tests/diagnostics/uninit.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 3,
          "character": 14
        },
        "end": {
          "line": 3,
          "character": 15
        }
      },
      "severity": 1,
      "code": "undef",
      "source": "wat",
      "message": "cannot find param or local `0` in this scope"
    }
  ]
}
